--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -47,7 +47,7 @@ build:
 	@ # Generate protobuf files, install dependencies and build executable
 	protoc -I=../../ --go_out=. --go-grpc_out=. ../../vessels/*.proto
 	go mod tidy
-	go build ${COMPILE_FLAGS} -o build/$(EXEC_NAME) ./sources
+	go build -ldflags ${COMPILE_FLAGS} -o build/$(EXEC_NAME) ./sources
 .PHONY: build
 
 certificates:
