--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -48,3 +48,16 @@ path = "src/lib/mod.rs"
 name = "cli"
 path = "src/cli.rs"
 required-features = ["cli-exec"] 
+
+
+
+[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
+pre-build = [
+    "apt-get update && apt-get --y install protobuf-compiler"
+]
+
+[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
+pre-build = [
+    "dpkg --add-architecture $CROSS_DEB_ARCH",
+    "apt-get update && apt-get --y install protobuf-compiler"
+]
