--- a/viridian/reef/Cross.toml
+++ b/viridian/reef/Cross.toml
@@ -3,14 +3,14 @@ passthrough = [
     "PROTOC_VERSION=24.4"
 ]
 
-[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
+[target.x86_64-unknown-linux-gnu]
 pre-build = [
     "PROTOC_ZIP=protoc-$PROTOC_VERSION-linux-$CROSS_DEB_ARCH.zip",
     "wget -qO \"$PROTOC_ZIP\" https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP",
     "unzip -o \"$PROTOC_ZIP\" -d /usr/local bin/protoc && unzip -o \"$PROTOC_ZIP\" -d /usr/local 'include/*' && rm -f \"$PROTOC_ZIP\""
 ]
 
-[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
+[target.aarch64-unknown-linux-gnu]
 pre-build = [
     "PROTOC_ZIP=protoc-$PROTOC_VERSION-linux-$CROSS_DEB_ARCH.zip",
     "wget -qO \"$PROTOC_ZIP\" https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP",
