--- a/viridian/reef/Cross.toml
+++ b/viridian/reef/Cross.toml
@@ -6,6 +6,7 @@ passthrough = [
 [target.x86_64-unknown-linux-gnu]
 pre-build = [
     "PROTOC_ZIP=protoc-$PROTOC_VERSION-linux-$CROSS_DEB_ARCH.zip",
+    "dpkg --add-architecture $CROSS_DEB_ARCH && apt-get update && apt-get install -y wget unzip",
     "wget -qO \"$PROTOC_ZIP\" https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP",
     "unzip -o \"$PROTOC_ZIP\" -d /usr/local bin/protoc && unzip -o \"$PROTOC_ZIP\" -d /usr/local 'include/*' && rm -f \"$PROTOC_ZIP\""
 ]
@@ -13,6 +14,7 @@ pre-build = [
 [target.aarch64-unknown-linux-gnu]
 pre-build = [
     "PROTOC_ZIP=protoc-$PROTOC_VERSION-linux-$CROSS_DEB_ARCH.zip",
+    "dpkg --add-architecture $CROSS_DEB_ARCH && apt-get update && apt-get install -y wget unzip",
     "wget -qO \"$PROTOC_ZIP\" https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP",
     "unzip -o \"$PROTOC_ZIP\" -d /usr/local bin/protoc && unzip -o \"$PROTOC_ZIP\" -d /usr/local 'include/*' && rm -f \"$PROTOC_ZIP\""
 ]
