--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -34,6 +34,7 @@ cli-exec = ["structopt"]
 
 [build-dependencies]
 tonic-build = "^0.12.3"
+protoc-prebuilt = "^0.3.0"
 
 [dev-dependencies]
 regex = "^1.11.1"
