--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -8,23 +8,18 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Set protoc version environment variables.
-ENV PROTOC_VERSION=24.4
-ENV PROTOC_ZIP=protoc-$PROTOC_VERSION-linux-x86_64.zip
+# Install python dependencies and build system.
+RUN apt-get update && apt-get install -y --no-install-recommends python3-pip \
+    && pip install --upgrade --no-cache-dir poetry && poetry self add poetry-plugin-export
 
-# Download and install latest protoc compiler and python dependencies.
-RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip ca-certificates && rm -rf /var/lib/apt/lists/*
-RUN wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
-RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export poethepoet[poetry_plugin]
-
-# Export dependencies from poetry to a `requirements.txt` file.
+# Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml ./
 RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
-RUN poetry --no-plugins install --without client,devel
+RUN poetry install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
+RUN poetry run python3 -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
 FROM ubuntu:22.04 AS default-sleeping
