--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -10,6 +10,11 @@ SEASIDE_EXTERNAL=127.0.0.1
 # Seaside control port for viridian encrypted TCP control packets (any, tailed)
 SEASIDE_CTRLPORT=8587
 
+# Path for storing logs, two files will be created there: "danger.log" and "safe.log"
+SEASIDE_CERTIFICATE_PATH=certificates
+# Path for storing certificates, two files should be present there: "cert.crt" and "key.crt"
+SEASIDE_LOG_PATH=logs
+
 # Maximum network viridian number (should be >= 0)
 SEASIDE_MAX_VIRIDIANS=10
 # Maximum privileged viridian number (should be >= 0)
