--- a/viridian/reef/docker/compose.yml
+++ b/viridian/reef/docker/compose.yml
@@ -27,6 +27,8 @@ services:
       - ../certificates/viridian:/seaside/viridian/ca:ro
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
+    profiles:
+      - client
     depends_on:
       whirlpool:
         condition: service_healthy
