--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,9 @@
 ## Dependency lock file:
 .github/scripts/package-lock.json
 
-## Testing utilities cache files:
+## Testing utilities files:
 .github/scripts/.reef_test_cache
+.github/scripts/certificates
 
 
 
