--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install NodeJS 🪢
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4.1.0
         with:
           node-version: 22
 
@@ -61,7 +61,8 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Python Dependencies 🔮
+      - name: Install Dependencies 🔮
+        shell: bash
         run: |
           npm install --prefix .github/scripts
           pip3 install poetry poethepoet[poetry_plugin]
@@ -75,6 +76,7 @@ jobs:
           override: true
 
       - name: Prepare Host
+        shell: bash
         run: npm run --prefix .github/scripts configure-viridian-test
 
       - name: Test Viridian Reef (unit) 🧪
