--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,17 +73,11 @@ jobs:
           target: ${{ env.TARGET }}
           override: true
 
+      - name: Test Viridian Reef (unit) 🧪
+        run: make -C viridian/reef -s test-unit
+
       - name: Prepare Host
         run: npm run --prefix ${{ env.PREFIX }} configure-viridian-test
-
-      - name: Test Viridian Reef (unit) 🧪
-        uses: actions-rs/cargo@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          command: test
-          use-cross: true
-          args: --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml --target ${{ env.TARGET }}
 
       - name: Test Viridian Reef (integration) 🧪
         uses: actions-rs/cargo@v1
