--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,6 @@ jobs:
   viridian-reef-test:
     name: Test Viridian Reef
     runs-on: ${{ format('{0}-latest', matrix.os) }}
-    env:
-      TARGET: ${{ matrix.os == 'ubuntu' && 'x86_64-unknown-linux-gnu' || 'x86_64-pc-windows-msvc' }}
     strategy:
       fail-fast: false
       matrix:
@@ -73,11 +71,11 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: ${{ env.TARGET }}
+          target: ${{ matrix.os == 'ubuntu' && 'x86_64-unknown-linux-gnu' || 'x86_64-pc-windows-msvc' }}
           override: true
 
       - name: Test Viridian Reef (unit) 🧪
-        run: cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
+        run: sudo cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
 
       - name: Prepare Host
         run: npm run --prefix .github/scripts configure-viridian-test
@@ -85,7 +83,10 @@ jobs:
       - name: Test Viridian Reef (integration) 🧪
         env:
           TEST_COMMAND: poetry run pytest viridian/algae/tests/test_local.py
-        run: cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- --command "${{ env.TEST_COMMAND }}"
+        run: sudo cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- --command "${{ env.TEST_COMMAND }}"
+
+      - name: Reset Host
+        run: npm run --prefix .github/scripts configure-viridian-test -- -r
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
