--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,8 +74,8 @@ jobs:
           target: ${{ matrix.os == 'ubuntu' && 'x86_64-unknown-linux-gnu' || 'x86_64-pc-windows-msvc' }}
           override: true
 
-      - name: Test Viridian Reef (unit) 🧪
-        run: sudo -E /home/runner/.cargo/bin/cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
+#      - name: Test Viridian Reef (unit) 🧪
+#        run: sudo -E /home/runner/.cargo/bin/cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
 
       - name: Prepare Host
         run: npm run --prefix .github/scripts configure-viridian-test
