--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,15 +75,24 @@ jobs:
           override: true
 
 #      - name: Test Viridian Reef (unit) 🧪
-#        run: sudo -E /home/runner/.cargo/bin/cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
+#        run: sudo env "PATH=$PATH" cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
 
       - name: Prepare Host
         run: npm run --prefix .github/scripts configure-viridian-test
 
       - name: Test Viridian Reef (integration) 🧪
         env:
+          SEASIDE_PAYLOAD_VIRIDIAN: super_secret_user_payload_data
+          SEASIDE_ADDRESS: 10.87.82.87
+          SEASIDE_CTRLPORT: 8587
+          SEASIDE_ROOT_CERTIFICATE_AUTHORITY: certificates/viridian/rootCA.crt
+          SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
+          LOCAL_ADDRESS: 10.82.0.82
+          ECHO_ADDRESS: 10.42.0.42
+          ECHO_PORT: 5000
+          BUFFER_SIZE: 8192
           TEST_COMMAND: poetry run pytest viridian/algae/tests/test_local.py
-        run: sudo -E /home/runner/.cargo/bin/cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- --command "${{ env.TEST_COMMAND }}"
+        run: sudo env "PATH=$PATH" cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- --command "${{ env.TEST_COMMAND }}"
 
       - name: Reset Host
         run: npm run --prefix .github/scripts configure-viridian-test -- -r
