--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,8 +92,9 @@ jobs:
           ECHO_ADDRESS: 10.42.0.42
           ECHO_PORT: 5000
           BUFFER_SIZE: 8192
+          RUNNER_COMMAND: sudo -E env "PATH=$PATH" cargo
           TEST_COMMAND: poetry run pytest viridian/algae/tests/test_local.py
-        run: sudo -E env "PATH=$PATH" cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- --command "${{ env.TEST_COMMAND }}"
+        run: ${{ env.RUNNER_COMMAND }} run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- -a "${{ env.SEASIDE_ADDRESS}}" -c "${{ env.SEASIDE_CTRLPORT }}" -p "${{ env.SEASIDE_PAYLOAD_VIRIDIAN }}" -e "${{ env.TEST_COMMAND }}"
 
       - name: Reset Host
         run: npm run --prefix .github/scripts configure-viridian-test -- -r
