--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Install Dependencies 🔮
         run: |
-          npm install --prefix .github/scripts
+          npm install --workspace .github/scripts
           pip3 install poetry poethepoet[poetry_plugin]
           poetry -C viridian/algae install --without client,devel
 
@@ -79,7 +79,7 @@ jobs:
 #        run: sudo -E env "PATH=$PATH" cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
 
       - name: Prepare Host
-        run: npm run --prefix .github/scripts configure-viridian-test && ls . && ls certificates && ls certificates/viridian && exit 1
+        run: npm run --workspace .github/scripts configure-viridian-test && ls . && ls certificates && ls certificates/viridian && exit 1
 
       - name: Test Viridian Reef (integration) 🧪
         env:
@@ -97,7 +97,7 @@ jobs:
         run: ${{ env.RUNNER_COMMAND }} run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml -- -a "${{ env.SEASIDE_ADDRESS}}" -c "${{ env.SEASIDE_CTRLPORT }}" -p "${{ env.SEASIDE_PAYLOAD_VIRIDIAN }}" -e "${{ env.TEST_COMMAND }}"
 
       - name: Reset Host
-        run: npm run --prefix .github/scripts configure-viridian-test -- -r
+        run: npm run --workspace .github/scripts configure-viridian-test -- -r
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
