--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,23 +81,17 @@ jobs:
       - name: Prepare Host
         run: npm run --prefix .github/scripts configure-viridian-test
 
+      - name: Load .ENV File
+        uses: aarcangeli/load-dotenv@v1
+        with:
+          path: .github/scripts
+
       - name: Test Viridian Reef (integration) 🧪
         env:
-          SEASIDE_PAYLOAD_VIRIDIAN: super_secret_user_payload_data
-          SEASIDE_ADDRESS: 10.87.82.87
-          SEASIDE_CTRLPORT: 8587
           SEASIDE_ROOT_CERTIFICATE_AUTHORITY: viridian/reef/certificates/viridian/rootCA.crt
-          SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
-          LOCAL_ADDRESS: 10.82.0.82
-          ECHO_ADDRESS: 10.42.0.42
-          ECHO_PORT: 5000
-          BUFFER_SIZE: 8192
           RUNNER_COMMAND: sudo -E env "PATH=$PATH" cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml
           TEST_COMMAND: poetry -C viridian/algae run pytest --log-cli-level=INFO viridian/algae/tests/test_local.py
         run: ${{ env.RUNNER_COMMAND }} -- -a "${{ env.SEASIDE_ADDRESS}}" -c "${{ env.SEASIDE_CTRLPORT }}" -p "${{ env.SEASIDE_PAYLOAD_VIRIDIAN }}" -e "${{ env.TEST_COMMAND }}"
-
-      - name: Reset Host
-        run: npm run --prefix .github/scripts configure-viridian-test -- -r
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
